# HDL2Redstone

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
HDL2Redstone/: CMakeLists.txt  HDL2Redstone.cpp
HDL2Redstone/cell_lib/: BlankShape.schematic  CMakeLists.txt  HDL2Redstone.json  HDL2Redstone.lib
HDL2Redstone/cell_lib/AND/: basic_and_gate.schem
HDL2Redstone/cell_lib/BUF/: 1_tick_delay_buf.schem
HDL2Redstone/cell_lib/NOT/: horizontal_torch_inv.schem
HDL2Redstone/cell_lib/components/: and2.schem  buf.schem  dff.schem  false.schem  input.schem  inv.schem  nand2.schem  nor2.schem  or2.schem  output.schem  redstone_repeater_buf.schem  repeater_isolated_or_gate.schem  true.schem  xnor2.schem  xor2.schem
HDL2Redstone/cell_lib/connections/: redstone_dust.schem  wire.schem
HDL2Redstone/examples/adder_16/: adder_16.v  design_constr.json
HDL2Redstone/examples/adder_4/: adder_4.v  design_constr.json
HDL2Redstone/examples/and_gate/: and_gate.v  design.schem  design_constr.json
HDL2Redstone/examples/counter_4_sevenseg/: couter_4_sevenseg.v  design_constr.json
HDL2Redstone/examples/dff/: design_constr.json  dff.v
HDL2Redstone/examples/multiplier_4/: design_constr.json  multiplier_4.v
HDL2Redstone/examples/multiplier_8/: design_constr.json  multiplier_8.v
HDL2Redstone/examples/mux2_1/: design_constr.json  mux2_1.v
HDL2Redstone/include/: Cell.hpp  CellLibrary.hpp  Component.hpp  ComponentNetlist.hpp  Connection.hpp  Design.hpp  DesignConstraint.hpp  Exception.hpp  ModuleNetlist.hpp  ModulePort.hpp  Parameters.hpp  Placement.hpp  Placer.hpp  Router.hpp  Schematic.hpp  Timing.hpp
HDL2Redstone/lib/: CMakeLists.txt  Schematic.cpp  Schematic.hpp
HDL2Redstone/script/: CMakeLists.txt  CreateLibertyLib.py  HDL2Redstone.py  HDL2Redstone.py.in  yosys.py  yosys.ys.txt
HDL2Redstone/src/: CMakeLists.txt  Cell.cpp  CellLibrary.cpp  Component.cpp  ComponentNetlist.cpp  Connection.cpp  Design.cpp  DesignConstraint.cpp  Exception.cpp  ModuleNetlist.cpp  ModulePort.cpp  Parameters.cpp  Placement.cpp  Placer.cpp  Router.cpp  Schematic.cpp  Timing.cpp
HDL2Redstone/yosys_script/: sync.ys
cmake/: FindClangFormat.cmake  (+1 more)
(+8 files in other folders)
